overflow problem solved

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,16 @@
     
 }
 
+html {
+    
+    
+    overflow-x: hidden;
+  }
+  
+  body {
+    overflow-x: hidden;
+  }
+
 /* HEADER SEACTION STARTS */
 
 .header {
